# haskell-sonos-http-api

./: soap.notes  sonos.cabal  stack.yaml
app/: Main.hs
s/: runtests  test.sh
src/: Discover.hs  Lib.hs  Types.hs  Util.hs
src/Sonos/: Commands.hs  DB.hs  Debug.hs  Discover.hs  Events.hs  Lib.hs  Main.hs  Serve.hs  Types.hs  Util.hs  XML.hs
src/Sonos/DB/: Types.hs
src/Sonos/Plugins/: Pandora.hs  Songza.hs
src/Sonos/Plugins/Pandora/: Crypt.hs  Types.hs
src/Sonos/Plugins/Songza/: Types.hs
tests/: MainTestSuite.hs
tests/Sonos/: Compare.hs  XMLTest.hs
