name:                sonos
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/sonos#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       Sonos.Lib
                       , Sonos.Discover
                       , Sonos.Util
                       , Sonos.Types
                       , Sonos.Serve
                       , Sonos.Main
                       , Sonos.Events
                       , Sonos.XML
                       , Sonos.Commands
                       , Sonos.Debug
                       , Sonos.Plugins.Pandora
                       , Sonos.Plugins.Pandora.Crypt
                       , Sonos.Plugins.Pandora.Types
                       , Sonos.Plugins.Songza
                       , Sonos.Plugins.Songza.Types
  build-depends:         base >= 4.7 && < 5
                       , parsec
                       , wreq
                       , lens
                       , interpolatedstring-perl6
                       , bytestring
                       , HTTP
                       , MissingH
                       , Spock
                       , containers
                       , transformers
                       , optparse-applicative
                       , xml
                       , xml-conduit
                       , text
                       , network
                       , network-multicast
                       , async
                       , stm
                       , aeson
                       , xml-types
                       , network-info
                       , wai-extra
                       , data-default
                       , Crypto
                       , crypto-api
                       , cryptocipher
                       , base64-bytestring
                       , base16-bytestring
                       , unordered-containers
                       , time
                       , html-entities
                       , text-format
                       , formatting
                       , regex-pcre
                       , http-types
                       , path-pieces
                       , wai
                       , safe
                       , edit-distance
  default-language:    Haskell2010

executable sonos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  ld-options:          -static -pthread
  build-depends:       base
                     , sonos
  default-language:    Haskell2010

test-suite sonos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             MainTestSuite.hs
  other-modules:       Sonos.XMLTest
  build-depends:       base
                     , sonos
                     , HUnit
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , quickcheck-instances
                     , QuickCheck
                     , tasty-th
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , text
                     , containers
                     , data-default
                     , unordered-containers
                     , bytestring
                     , semigroups
                     , test-preproc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ld-options:          -static -pthread
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sonos
